<resources>
    <string name="app_name">DatabaseDemo_android</string>
    <string name="add_a_new_employee">Add a new Employee</string>
    <string name="enter_employee_name">Enter Employee name</string>
    <string name="enter_employee_salary">Enter Employee Salary</string>
    <string name="view_employees">View Employees</string>
    <string name="add_employee">Add Employee</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="select_department">Select Department</string>
    <string name="update">Update</string>

    <string-array name="departments">
        <item>Technical</item>
        <item>Support</item>
        <item>Research and Development</item>
        <item>Marketing</item>
        <item>Human Resource</item>
    </string-array>
</resources>